--- a/weather-app-ui/.gitignore
+++ b/weather-app-ui/.gitignore
@@ -1,23 +1,57 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node.js
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Build output
+build/
+dist/
+*.log
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+# Cache
+.cache/
+ 
+# Editor and IDE files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+*.swn
+*.swo
+*.swp
+*.sublime-*
+.sass-cache/
+.sublime-workspace
+.project
+.tmproj
+*.tmproj
+.tmtags
+.svn/
+Thumbs.db
+Desktop.ini
 .DS_Store
+
+# Environment variables
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Dependency lock files
+package-lock.json
+yarn.lock
+
+# Mac specific files
+.AppleDouble
+.LSOverride
+
+# Windows Installer files
+setup.log
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+Desktop.ini
