--- a/weather-app-ui/package.json
+++ b/weather-app-ui/package.json
@@ -9,12 +9,14 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
+    "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-list": "^0.8.17",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.4.4",
+    "tailwind": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
